{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 44,
  "lineage": "cfc5511b-5e1a-6b57-1d33-8a130f5b3c51",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_sre_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:internet-gateway/igw-00e385996409af7f9",
            "id": "igw-00e385996409af7f9",
            "owner_id": "835529065704",
            "tags": {
              "Name": "internet-gate"
            },
            "tags_all": {
              "Name": "internet-gate"
            },
            "vpc_id": "vpc-0e60edf69896cb8d5"
          },
          "dependencies": [
            "aws_vpc.vpc_sre"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_sre_public_tbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:route-table/rtb-0fe055fd3aabbcc31",
            "id": "rtb-0fe055fd3aabbcc31",
            "owner_id": "835529065704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e385996409af7f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table."
            },
            "tags_all": {
              "Name": "Public Subnet Route Table."
            },
            "timeouts": null,
            "vpc_id": "vpc-0e60edf69896cb8d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_sre_igw",
            "aws_vpc.vpc_sre"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_sre_rt_tbl_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea6aafb62e266aaa",
            "route_table_id": "rtb-0fe055fd3aabbcc31",
            "subnet_id": "subnet-01d88c80c0eaf0f09"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_sre_igw",
            "aws_route_table.vpc_sre_public_tbl",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_sre"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_sre_rt_tbl_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075942e29ee3ca53d",
            "route_table_id": "rtb-0fe055fd3aabbcc31",
            "subnet_id": "subnet-07ca47bb6eb8670f8"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_sre_igw",
            "aws_route_table.vpc_sre_public_tbl",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_sre"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:security-group/sg-03f036dcf80c2ea7e",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f036dcf80c2ea7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_sg",
            "name_prefix": "",
            "owner_id": "835529065704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_Http_sg"
            },
            "tags_all": {
              "Name": "allow_Http_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e60edf69896cb8d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_sre"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:security-group/sg-006fd554ec013c8b9",
            "description": "Allow SSH inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006fd554ec013c8b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_sg",
            "name_prefix": "",
            "owner_id": "835529065704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_sg"
            },
            "tags_all": {
              "Name": "allow_ssh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e60edf69896cb8d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_sre"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:subnet/subnet-01d88c80c0eaf0f09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d88c80c0eaf0f09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835529065704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_1",
              "key": "Public Subnet"
            },
            "tags_all": {
              "Name": "subnet_1",
              "key": "Public Subnet"
            },
            "vpc_id": "vpc-0e60edf69896cb8d5"
          },
          "dependencies": [
            "aws_vpc.vpc_sre"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:subnet/subnet-07ca47bb6eb8670f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ca47bb6eb8670f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835529065704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_2",
              "key": "Public Subnet"
            },
            "tags_all": {
              "Name": "subnet_2",
              "key": "Public Subnet"
            },
            "vpc_id": "vpc-0e60edf69896cb8d5"
          },
          "dependencies": [
            "aws_vpc.vpc_sre"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_sre",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:835529065704:vpc/vpc-0e60edf69896cb8d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ec19b492fbae995",
            "default_route_table_id": "rtb-0458f41cf127c9a3a",
            "default_security_group_id": "sg-0ef00c96053cfa078",
            "dhcp_options_id": "dopt-04a3fa2a0f98ff344",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e60edf69896cb8d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0458f41cf127c9a3a",
            "owner_id": "835529065704",
            "tags": {
              "Name": "vpc_sre"
            },
            "tags_all": {
              "Name": "vpc_sre"
            }
          }
        }
      ]
    }
  ]
}